# rscraping

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  downloadimages.py  fillforms.py  findlineup.py  findrace.py  lemmatize.py  parseimage.py  parsepdf.py  parseurl.py  processcsv.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytests.yaml
docs/: traineras_notes.txt
fixtures/: act_details.html  arc_details.html  arc_lineup.html  lgt_details.html  traineras_results.html
fixtures/df/: gdrive_tabular.h5  inforemo_tabular.h5
fixtures/html/: abe_details.html  abe_races.html  act_races.html  arc_races.html  lgt_races.html  lgt_results.html  traineras_club.html  traineras_details.html  traineras_lineup.html  traineras_rower.html
pdf/lineup/: __init__.py  _lineup.py  lgt.py
rscraping/: __init__.py  _functions.py  fillforms.py  findlineup.py  findrace.py  parseimage.py  parsepdf.py
rscraping/builder/: __init__.py  _fields.py  _item.py  fegar.py  image.py  national.py  xogade.py
rscraping/clients/: __init__.py  _client.py  _protocol.py  abe.py  act.py  arc.py  ete.py  gdrive.py  lgt.py  tabular.py  traineras.py
rscraping/data/: checks.py  constants.py  decorators.py  functions.py  models.py
rscraping/data/normalization/: __init__.py  clubs.py  leagues.py  lemmatize.py  penalty.py  races.py  times.py  towns.py  trophies.py
rscraping/ocr/: __init__.py  image.py  inforemo.py
rscraping/parsers/df/: __init__.py  _parser.py  _protocol.py  gdrive.py  inforemo.py  tabular.py
rscraping/parsers/html/: __init__.py  _parser.py  _protocol.py  abe.py  act.py  arc.py  ete.py  lgt.py  traineras.py
rscraping/parsers/ocr/: __init__.py  _image.py  _parser.py  inforemo.py
rscraping/parsers/pdf/: __init__.py  _parser.py  _protocol.py  act.py  lgt.py
scripts/: downloadimages.py  findlineup.py  findrace.py  lemmatize.py  parseimage.py  processcsv.py
src/ocr/: __init__.py  _image.py  inforemo.py
src/pdf/builder/: __init__.py  _consts.py  _item.py  fegar.py  image.py  national.py  xogade.py
src/pdf/lineup/: __init__.py  _lineup.py  act.py  lgt.py
src/url/lineup/: __init__.py  _lineup.py  arc.py
src/utils/: constants.py  functions.py  models.py  validators.py
src/utils/normalization/: clubs.py  leagues.py  times.py  trophies.py
tests/: club_normalization_test.py  league_normalization_test.py  race_normalization_test.py  test_abe_parser.py  test_abe_parsers.py  test_act_parser.py  test_arc_parser.py  test_lgt_parser.py  test_race_normalization.py  test_traineras_parser.py
tests/clients/: client_test.py
tests/fixtures/html/: act_details.html  act_races.html  arc_lineups.html  lgt_calendar.html  lgt_races.html  traineras_club_details.html  traineras_details.html  traineras_flag.html  traineras_flag_editions.html  traineras_race.html  (+7 more)
tests/normalization/: club_normalization_test.py  league_normalization_test.py  lemmatization_test.py  penalty_normalization_test.py  race_normalization_test.py  time_normalization_test.py  town_normalization_test.py
tests/parsers/: act_parser_test.py
utils/: functions.py  models.py
(+14 files in other folders)
