[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
exclude = [
	"**/build",
	"**/dist",
	"**/out",
	"**/venv",
]

[tool.coverage.run]
source = ["rscraping"]
omit = [
	"rscraping/_functions.py",
	"rscraping/data/*.py",
	"rscraping/**/_protocol.py",
	"**/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
	"logger.*",
    ]
