[metadata]
name = rscraping
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Iago Santos

[options]
packages = find:
install_requires =
    PyMuPDF
    parsel
    requests
    simplemma
dependency_links = https://github.com/iagocanalejas/pyutils.git@master#egg=pyutils
